--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "/Portfolio/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
